# serializer version: 1
# name: test_r4_asmaddr2_bf16_srvw_golden
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_UserArgs_MT128x128x16QLt_tHIzb4PRHP55U8CyRfa8oIqtisTx_vEj_G95uF4=',
      'err': 0,
    }),
  ])
# ---
# name: test_r4_asmaddr2_fp32_golden
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT64x256x16_MI16x16xJu1pY6kZuHoL9woXT-zbROol185B2Dqcr1MR9bW-Xuk=',
      'err': 0,
    }),
  ])
# ---
